class imbalance fix

--- a/model.ipynb
+++ b/model.ipynb
@@ -191,32 +191,22 @@
         "from sklearn.utils.class_weight import compute_class_weight\n",
         "import numpy as np\n",
         "\n",
-        "# Extract numeric labels from the training dataset\n",
-        "train_labels = []\n",
-        "for _, labels in train:  # `train` is the training dataset\n",
-        "    train_labels.extend(labels.numpy())  # Append all numeric labels\n",
-        "\n",
-        "train_labels = np.array(train_labels)  # Convert to numpy array\n",
-        "\n",
-        "# Compute class weights based on the extracted labels\n",
         "class_weights = compute_class_weight(\n",
         "    class_weight='balanced',\n",
-        "    classes=np.unique(train_labels),  # Unique numeric labels\n",
-        "    y=train_labels  # Labels from the dataset\n",
+        "    classes=np.arange(len(class_names)),\n",
+        "    y=[label for _, labels in train for label in labels.numpy()]\n",
         ")\n",
-        "\n",
-        "# Convert to a dictionary to pass to `fit`\n",
         "class_weights_dict = {i: class_weights[i] for i in range(len(class_weights))}\n",
         "print(class_weights_dict)\n"
       ],
       "metadata": {
-        "id": "HwNWVteIPEn2",
-        "outputId": "07f02d9a-52fc-4fb5-aeca-2c2207f2c1f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HwNWVteIPEn2",
+        "outputId": "8f8c74b7-7d9e-4c53-fd72-c51d85d487b8"
       },
-      "execution_count": 62,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,11 +321,11 @@
       ],
       "metadata": {
         "id": "faHXzjShfWw-",
-        "outputId": "7cc5ecd7-e666-4c4f-fbd3-ff6db227b795",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305
-        }
+        },
+        "outputId": "7cc5ecd7-e666-4c4f-fbd3-ff6db227b795"
       },
       "execution_count": 54,
       "outputs": [
@@ -450,10 +440,10 @@
       "execution_count": 56,
       "metadata": {
         "id": "7VJQMawvbNw4",
-        "outputId": "3891087b-ff99-470f-a19d-e359ae6e5775",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3891087b-ff99-470f-a19d-e359ae6e5775"
       },
       "outputs": [
         {
@@ -565,7 +555,7 @@
       ],
       "source": [
         "history = model.fit(\n",
-        "    train,\n",
+        "    train_pre,\n",
         "    validation_data = val,\n",
         "    epochs = 50,\n",
         "    class_weight=class_weights_dict\n",
@@ -575,12 +565,41 @@
     {
       "cell_type": "code",
       "source": [
-        "acc = model.evaluate(val)"
+        "# import numpy as np\n",
+        "\n",
+        "# y_true = []\n",
+        "# for _, labels in val:  # Loop over the validation dataset\n",
+        "#     y_true.extend(labels.numpy())  # Append labels to the list\n",
+        "\n",
+        "# y_true = np.array(y_true)  # Convert to a NumPy array\n",
+        "\n",
+        "# y_pred = []\n",
+        "# for images, _ in val:  # Loop over the validation dataset\n",
+        "#     preds = model.predict(images)  # Get predictions\n",
+        "#     y_pred.extend(np.argmax(preds, axis=1))  # Get predicted class indices\n",
+        "\n",
+        "# y_pred = np.array(y_pred)  # Convert to a NumPy array\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "rxmCzGVVQTIL"
       },
-      "execution_count": null,
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from sklearn.metrics import classification_report\n",
+        "\n",
+        "# print(classification_report(y_true, y_pred, target_names=class_names))"
+      ],
+      "metadata": {
+        "id": "jioqp599UDpW"
+      },
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -591,7 +610,7 @@
       "metadata": {
         "id": "5KeA_SeSd3nv"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     }
   ],
