facing class imbalance

--- a/model.ipynb
+++ b/model.ipynb
@@ -50,10 +50,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 98,
       "metadata": {
         "id": "WDt0V9A3bNwy",
-        "outputId": "9b4d05f9-1941-4c82-ad3c-8181224d4175",
+        "outputId": "96560874-440d-4669-f33a-08b3762e5e5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 99,
       "metadata": {
         "id": "mdIoI4dKbNw2"
       },
@@ -190,15 +190,25 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.utils.class_weight import compute_class_weight\n",
         "import numpy as np\n",
+        "from sklearn.utils.class_weight import compute_class_weight\n",
         "\n",
+        "# Collecting the labels from the training dataset\n",
+        "all_labels = []\n",
+        "for images, labels in train:\n",
+        "    all_labels.extend(labels.numpy())  # Extend the list with labels from the batch\n",
+        "\n",
+        "# Compute class weights\n",
         "class_weights = compute_class_weight(\n",
         "    class_weight='balanced',\n",
         "    classes=np.arange(len(class_names)),\n",
-        "    y=[label for _, labels in train for label in labels.numpy()]\n",
+        "    y=all_labels  # Using all collected labels\n",
         ")\n",
+        "\n",
+        "# Create a dictionary for class weights\n",
         "class_weights_dict = {i: class_weights[i] for i in range(len(class_weights))}\n",
+        "\n",
+        "# Print the dictionary\n",
         "print(class_weights_dict)\n"
       ],
       "metadata": {
@@ -206,15 +216,43 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HwNWVteIPEn2",
-        "outputId": "24a7f91f-3178-448b-d345-5b304aaf8f16"
+        "outputId": "74a76a58-2256-403e-b0af-8db200e79807"
       },
-      "execution_count": 78,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{0: 1.7341875127110027, 1: 0.7336947169161935, 2: 1.4307046979865772, 3: 1.1445637583892618, 4: 1.1679222024380222, 5: 1.2440910417274584, 6: 1.3625759028443591, 7: 1.10054207537429, 8: 1.1679222024380222, 9: 0.24881820834549168, 10: 1.10054207537429, 11: 1.467389433832387, 12: 1.4307046979865772, 13: 1.3958094614503191, 14: 0.2456145404268802, 15: 1.10054207537429, 16: 1.2717375093214018, 17: 1.059781257767835, 18: 1.1679222024380222, 19: 1.2440910417274584, 20: 1.1679222024380222, 21: 1.3308880911503043, 22: 1.5467077816071104, 23: 1.1221213317541783, 24: 1.467389433832387, 25: 1.10054207537429, 26: 1.1445637583892618, 27: 0.6812879514221796, 28: 1.1922539149888143, 29: 0.9699692867705608, 30: 1.5467077816071104, 31: 1.4307046979865772, 32: 1.3625759028443591, 33: 1.059781257767835, 34: 1.2717375093214018, 35: 1.0040032968326857, 36: 1.0040032968326857, 37: 0.6288811859281658, 38: 1.2176210195630444, 39: 1.4307046979865772, 40: 1.1922539149888143, 41: 1.2176210195630444, 42: 1.300640634533252, 43: 1.0405125076266015, 44: 1.2440910417274584, 45: 1.1922539149888143, 46: 1.10054207537429, 47: 1.300640634533252, 48: 1.1679222024380222, 49: 1.059781257767835, 50: 1.0405125076266015, 51: 1.1679222024380222, 52: 1.1679222024380222, 53: 1.2440910417274584, 54: 1.0797771305559074, 55: 1.10054207537429, 56: 1.2440910417274584, 57: 1.0040032968326857, 58: 1.0040032968326857, 59: 1.1445637583892618, 60: 1.3625759028443591, 61: 1.2440910417274584, 62: 1.1679222024380222, 63: 1.0219319271332694, 64: 1.2717375093214018, 65: 1.0797771305559074, 66: 1.0797771305559074, 67: 1.10054207537429, 68: 0.8941904362416108, 69: 1.059781257767835, 70: 1.1679222024380222, 71: 1.467389433832387, 72: 1.2440910417274584, 73: 1.1221213317541783, 74: 1.1922539149888143, 75: 1.300640634533252, 76: 1.2176210195630444, 77: 0.9866928951631567, 78: 1.059781257767835, 79: 1.0040032968326857, 80: 1.1445637583892618, 81: 1.0405125076266015, 82: 0.22983207999784372, 83: 1.1679222024380222, 84: 1.2440910417274584, 85: 1.1445637583892618, 86: 1.0040032968326857, 87: 1.059781257767835, 88: 1.1679222024380222, 89: 1.300640634533252, 90: 0.9230352890235982, 91: 1.0040032968326857, 92: 1.3308880911503043, 93: 1.3308880911503043, 94: 1.10054207537429, 95: 1.3958094614503191, 96: 1.2717375093214018, 97: 1.300640634533252, 98: 1.10054207537429, 99: 1.1445637583892618, 100: 1.0040032968326857, 101: 0.2589510765586565, 102: 1.1221213317541783, 103: 1.1445637583892618, 104: 1.1221213317541783, 105: 1.1679222024380222, 106: 1.10054207537429, 107: 1.2440910417274584, 108: 1.0405125076266015, 109: 0.4470952181208054, 110: 0.9381670150731654, 111: 0.9381670150731654, 112: 0.9866928951631567, 113: 1.0797771305559074, 114: 1.3625759028443591, 115: 0.9230352890235982, 116: 1.1221213317541783, 117: 0.9866928951631567, 118: 1.0040032968326857, 119: 1.0219319271332694, 120: 1.1445637583892618, 121: 1.1221213317541783, 122: 0.8293940278183056, 123: 1.2176210195630444, 124: 1.0219319271332694, 125: 1.1679222024380222, 126: 0.5610606658770891, 127: 0.25322207044010214, 128: 1.1445637583892618, 129: 1.1221213317541783, 130: 1.2176210195630444, 131: 1.0405125076266015, 132: 1.2440910417274584, 133: 1.3625759028443591, 134: 1.0219319271332694, 135: 1.1221213317541783, 136: 1.5467077816071104, 137: 0.9699692867705608, 138: 1.3958094614503191, 139: 1.0797771305559074, 140: 1.1221213317541783, 141: 0.9866928951631567, 142: 1.3625759028443591, 143: 1.1679222024380222, 144: 1.467389433832387, 145: 1.1221213317541783, 146: 1.059781257767835, 147: 1.2176210195630444, 148: 1.5467077816071104}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_counts = {class_name: 0 for class_name in class_names}\n",
+        "for _, labels in train:\n",
+        "    for label in labels.numpy():\n",
+        "        class_counts[class_names[label]] += 1\n",
+        "\n",
+        "print(\"Class counts:\", class_counts)\n"
+      ],
+      "metadata": {
+        "id": "5-ozDbbTAq_M",
+        "outputId": "9fbb5983-cd82-4289-f882-d239d91fd0db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Class counts: {'Abra': 33, 'Aerodactyl': 78, 'Alakazam': 40, 'Arbok': 50, 'Arcanine': 49, 'Articuno': 46, 'Beedrill': 42, 'Bellsprout': 52, 'Blastoise': 49, 'Bulbasaur': 230, 'Butterfree': 52, 'Caterpie': 39, 'Chansey': 40, 'Charizard': 41, 'Charmander': 233, 'Charmeleon': 52, 'Clefable': 45, 'Clefairy': 54, 'Cloyster': 49, 'Cubone': 46, 'Dewgong': 49, 'Diglett': 43, 'Ditto': 37, 'Dodrio': 51, 'Doduo': 39, 'Dragonair': 52, 'Dragonite': 50, 'Dratini': 84, 'Drowzee': 48, 'Dugtrio': 59, 'Eevee': 37, 'Ekans': 40, 'Electabuzz': 42, 'Electrode': 54, 'Exeggcute': 45, 'Exeggutor': 57, 'Farfetchd': 57, 'Fearow': 91, 'Flareon': 47, 'Gastly': 40, 'Gengar': 48, 'Geodude': 47, 'Gloom': 44, 'Golbat': 55, 'Goldeen': 46, 'Golduck': 48, 'Golem': 52, 'Graveler': 44, 'Grimer': 49, 'Growlithe': 54, 'Gyarados': 55, 'Haunter': 49, 'Hitmonchan': 49, 'Hitmonlee': 46, 'Horsea': 53, 'Hypno': 52, 'Ivysaur': 46, 'Jigglypuff': 57, 'Jolteon': 57, 'Jynx': 50, 'Kabuto': 42, 'Kabutops': 46, 'Kadabra': 49, 'Kakuna': 56, 'Kangaskhan': 45, 'Kingler': 53, 'Koffing': 53, 'Krabby': 52, 'Lapras': 64, 'Lickitung': 54, 'Machamp': 49, 'Machoke': 39, 'Machop': 46, 'Magikarp': 51, 'Magmar': 48, 'Magnemite': 44, 'Magneton': 47, 'Mankey': 58, 'Marowak': 54, 'Meowth': 57, 'Metapod': 50, 'Mew': 55, 'Mewtwo': 249, 'Moltres': 49, 'MrMime': 46, 'Muk': 50, 'Nidoking': 57, 'Nidoqueen': 54, 'Nidorina': 49, 'Nidorino': 44, 'Ninetales': 62, 'Oddish': 57, 'Omanyte': 43, 'Omastar': 43, 'Onix': 52, 'Paras': 41, 'Parasect': 45, 'Persian': 44, 'Pidgeot': 52, 'Pidgeotto': 50, 'Pidgey': 57, 'Pikachu': 221, 'Pinsir': 51, 'Poliwag': 50, 'Poliwhirl': 51, 'Poliwrath': 49, 'Ponyta': 52, 'Porygon': 46, 'Primeape': 55, 'Psyduck': 128, 'Raichu': 61, 'Rapidash': 61, 'Raticate': 58, 'Rattata': 53, 'Rhydon': 42, 'Rhyhorn': 62, 'Sandshrew': 51, 'Sandslash': 58, 'Scyther': 57, 'Seadra': 56, 'Seaking': 50, 'Seel': 51, 'Shellder': 69, 'Slowbro': 47, 'Slowpoke': 56, 'Snorlax': 49, 'Spearow': 102, 'Squirtle': 226, 'Starmie': 50, 'Staryu': 51, 'Tangela': 47, 'Tauros': 55, 'Tentacool': 46, 'Tentacruel': 42, 'Vaporeon': 56, 'Venomoth': 51, 'Venonat': 37, 'Venusaur': 59, 'Victreebel': 41, 'Vileplume': 53, 'Voltorb': 51, 'Vulpix': 58, 'Wartortle': 42, 'Weedle': 49, 'Weepinbell': 39, 'Weezing': 51, 'Wigglytuff': 54, 'Zapdos': 47, 'Zubat': 37}\n"
           ]
         }
       ]
